<resources>
    <string name="app_name">Eldritch Horror Assistant</string>
    <string name="main_header">My games</string>
    <string name="choose_date">Choose a date</string>
    <string name="ready">OK</string>
    <string name="date">Date</string>
    <string name="ancientOne">Ancient One</string>
    <string name="playersCount">Number of players</string>
    <string name="additionalRules">Additional rules</string>
    <string name="simpleMyths">Easy Mythos Cards</string>
    <string name="normalMyths">Normal Mythos cards</string>
    <string name="hardMyths">Hard Mythos Cards</string>
    <string name="startingRumor">Starting Rumor</string>
    <string name="next">Next</string>
    <string name="gatesCount">Number of open Gates on the game board</string>
    <string name="monstersCount">Number of Monsters on the game board</string>
    <string name="curseCount">Total number of \"Cursed\" or \"Dark Pact\" Conditions</string>
    <string name="rumorsCount">Number of Rumor Mythos card in play</string>
    <string name="cluesCount">Total number of Clue tokens investigators have</string>
    <string name="blessedCount">Total number of \"Blessed\" Conditions investigators have</string>
    <string name="doomCount">Current level of Doom</string>
    <string name="totalScore">Total score</string>
    <string name="saveResult">Save result</string>
    <string name="edit_result">Edit result</string>
    <string name="partyDetails">Details</string>
    <string name="gameResult">Result</string>
    <string name="win_or_defeat_header">Result</string>
    <string name="win_table_header">Scoring</string>
    <string name="defeat_table_header">Reasons for defeat</string>
    <string name="dialogAlert">Confirm</string>
    <string name="deleteDialogMessage">Do you want to delete the game result?</string>
    <string name="cleanDialogMessage">Do you want to clean the list of investigators?</string>
    <string name="messageOK">Yes</string>
    <string name="messageCancel">No</string>
    <string name="activity_party_details_header">Details</string>
    <string name="activity_add_party_header">Initial data</string>
    <string name="activity_investigators_choice_header">Investigators</string>
    <string name="zero" translatable="false">0</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="starting_game">Initial team</string>
    <string name="replacement">Replacement</string>
    <string name="dead">Out of the game</string>
    <string name="starting_game_female">Initial team</string>
    <string name="replacement_female">Replacement</string>
    <string name="dead_female">Out of the game</string>
    <string name="initial_conditions">Initial conditions</string>
    <string name="investigators">Investigators</string>
    <string name="investigators_none">None</string>
    <string name="success_deleting_message">Result successfully deleted!</string>
    <string name="defeat_header">Defeat</string>
    <string name="win_header">Victory</string>
    <string name="defeat_by_elimination">All investigators have been eliminated</string>
    <string name="defeat_by_mythos_depletion">A Mythos card cannot be drawn</string>
    <string name="defeat_by_awakened_ancient_one">Indication on the Ancient One sheet</string>
    <string name="defeat_by_rumor">Indication on the Rumor card</string>
    <string name="defeat_by_prelude">Indication on the Prelude card</string>
    <string name="defeat_by_surrender">Surrender</string>
    <string name="add_new_game">Create a new game</string>
    <string name="edit_game">Edit game</string>
    <string name="dialogBackAlert">Unsaved data will be lost!</string>
    <string name="backDialogMessage">Do you want to leave?</string>
    <string name="edit_expansion">Edit the list of expansion</string>
    <string name="expansion_list_header">Select expansions</string>
    <string name="games_count">Total number of games</string>
    <string name="best_result">Best result</string>
    <string name="worst_result">Worst result</string>
    <string name="about">About</string>
    <string name="donate">Donate now</string>
    <string name="version_header" translatable="false">v.\u0020</string>
    <string name="donate_message">To get full access for 24 hours play ad video</string>
    <string name="view_question">Play now?</string>
    <string name="view_error">Не удалось загрузить рекламный ролик\nПредоставлен кратковременный доступ</string>
    <string name="view_success">Получен доступ на 24 часа</string>
    <string name="authors_header">Created by</string>
    <string name="development_header">Developed by</string>
    <string name="developer">Argajasha</string>
    <string name="translation_header">Translated by</string>
    <string name="translator">brainstorm</string>
    <string name="rate_title">Please rate app</string>
    <string name="rate_massage">If you enjoy using Eldritch Horror Assistant, please take a moment to rate it.\nThanks for your support!</string>
    <string name="rate_error">Error open app page</string>
    <string name="message_rate">Rate now</string>
    <string name="message_later">Remind Me Later</string>
    <string name="message_starting">So far there are no articles of the game.\nTo add the result of the game, click on the big orange button.</string>
    <string name="random_button_header">Random selection</string>
    <string name="alert_investigators_limit">"Number of initial investigators exceeded!"</string>
    <string name="sort_mode_message_1">"Sort by date descending"</string>
    <string name="sort_mode_message_2">"Sort by date ascending"</string>
    <string name="sort_mode_message_3">"Sort by Ancient One"</string>
    <string name="sort_mode_message_4">"Sort by score descending"</string>
    <string name="sort_mode_message_5">"Sort by score ascending"</string>
    <string name="solved_mysteries_header">"Number of solved mysteries"</string>
    <string name="sign_out_menu_header">Sign Out</string>
    <string name="prelude_header">Prelude</string>
    <string name="auth_error">Authentication failed</string>
    <string name="auth_header">Sign in</string>
    <string name="statistics_header">Statistics</string>
    <string name="statistics_none">No data</string>
    <string name="win_defeat_stat_description">Victory/Defeat</string>
    <string name="win_stat_label">Victory</string>
    <string name="defeat_stat_label">Defeat</string>
    <string name="all_results">All articles</string>
    <string name="other_results">Others</string>
    <string name="last_game_header">Last game</string>
    <string name="popular_investigators_header">Popular investigators</string>
    <string name="summary_stat_header">Summary</string>
    <string name="not_available">Not available</string>
    <string name="best_game">Best game</string>
    <string name="donate_paypal_description" translatable="false">Donate PayPal</string>
    <string name="donate_yandex_description" translatable="false">Donate Yandex</string>
    <string name="statistics_background" translatable="false">statistics_background</string>
    <string name="music_header">Atmospheric music</string>
    <string name="specialization_header">Specialization of investigators</string>
    <string name="clean_header">Clean the list of investigators</string>
    <string name="game_photo_header">Photo Gallery</string>
    <string name="delete_photo_dialog_message">Delete the selected files?</string>
    <string name="game_photo_none">None</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="create_file_error">Cannot create file</string>
    <string name="d1" translatable="false">1$</string>
    <string name="d2" translatable="false">2$</string>
    <string name="d5" translatable="false">5$</string>
    <string name="d10" translatable="false">10$</string>
    <string name="d50" translatable="false">50$</string>
    <string name="d100" translatable="false">100$</string>
    <string name="donate_error_header">Error! Try again later.</string>
    <string name="donate_success_header">Thanks for the support!</string>
    <string name="select_image_header">Tap to select</string>
    <string name="folders_header">Folders</string>
    <string name="camera_header">Camera</string>
    <string name="gallery_header">Gallery</string>
    <string name="comment_header">Comment</string>
    <string name="comment_none">None</string>
    <string name="rumor">Rumor</string>
    <string name="forgotten_endings_header">Forgotten endings</string>
    <string name="forgotten_endings_read_header">Random ending</string>
    <string name="forgotten_endings_select_ancient_one_header">Select Ancient One</string>
    <string name="navigation_drawer_open">Drawer open</string>
    <string name="navigation_drawer_close">Drawer close</string>
    <string name="drawer_header_sign_in">Sign in</string>
    <string name="drawer_header_sync">to sync data</string>
    <string name="time_header">Time</string>
    <string name="time_hour">h</string>
    <string name="time_minute">m</string>
    <string name="faq_header">FAQ</string>
    <string name="search_header">Search</string>
    <string name="refresh_header">Refresh</string>
    <string name="format_data_error_header">Incorrect data format, please contact the developer</string>
    <string name="connection_error_header">Connection error, please check your connection and try again</string>
    <string name="update_complete">Update complete</string>
    <string name="random_card_header">Random card</string>
    <string name="condition">Condition</string>
    <string name="spell">Spell</string>
    <string name="unique_asset">Unique Asset</string>
    <string name="bane">Bane</string>
    <string name="boon">Boon</string>
    <string name="common">Common</string>
    <string name="deal">Deal</string>
    <string name="exposure">Exposure</string>
    <string name="illness">Illness</string>
    <string name="injury">Injury</string>
    <string name="madness">Madness</string>
    <string name="pursuit">Pursuit</string>
    <string name="restriction">Restriction</string>
    <string name="talent">Talent</string>
    <string name="agreement">Agreement</string>
    <string name="amnesia">Amnesia</string>
    <string name="attuned">Attuned</string>
    <string name="back_injury">Back Injury</string>
    <string name="blessed">Blessed</string>
    <string name="blight">Blight</string>
    <string name="composed">Composed</string>
    <string name="corruption">Corruption</string>
    <string name="cursed">Cursed</string>
    <string name="dark_pact">Dark Pact</string>
    <string name="debt">Debt</string>
    <string name="despair">Despair</string>
    <string name="detained">Detained</string>
    <string name="diseased">Diseased</string>
    <string name="elusive">Elusive</string>
    <string name="funding">Funding</string>
    <string name="guts">Guts</string>
    <string name="hallucinations">Hallucinations</string>
    <string name="haunted">Haunted</string>
    <string name="head_injury">Head Injury</string>
    <string name="headstrong">Headstrong</string>
    <string name="hunger">Hunger</string>
    <string name="hunted">Hunted</string>
    <string name="random_card_keep_screen_on">Keep screen on</string>
    <string name="random_card_not_keep_screen_on">Not keep screen on</string>
    <string name="animation_3d_header">Animation 3D</string>
    <string name="animation_2D_header">Animation 2D</string>
    <string name="dice_success_mode_4_header">Successes: 4, 5, 6</string>
    <string name="dice_success_mode_5_header">Successes: 5, 6</string>
    <string name="dice_success_mode_6_header">Successes: 6</string>
</resources>