<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit_expansion"
        android:icon="@drawable/filter_white"
        android:title="@string/edit_expansion"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_random_settings"
        android:icon="@drawable/specialization_settings"
        android:title="@string/specialization_header"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_random"
        android:icon="@drawable/random"
        android:title="@string/random_button_header"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/cancel_select_white"
        android:title="@string/clean_header"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/select_all_white"
        android:title="@string/select_all"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_select_cancel"
        android:icon="@drawable/cancel_select_white"
        android:title="@string/deselect_all"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/checked_white"
        android:title="@string/saveResult"
        app:showAsAction="always|collapseActionView" />
</menu>