<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context="ru.mgusev.eldritchhorror.ui.activity.about.AboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/about_toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_collapseMode="pin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/aboutTheme" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_toolbar">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/eldritch_horror_logo" />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/authors_header"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/development_header"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/developer" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/translation_header"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/translator" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/donate"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/about_donate_1_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/image_button_border"
                android:backgroundTint="@color/cardview_light_background"
                android:foreground="?attr/selectableItemBackground"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:scaleType="fitCenter"
                android:text="@string/d1"
                android:theme="@style/AppTheme.ColorHighlight" />

            <Button
                android:id="@+id/about_donate_2_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/image_button_border"
                android:backgroundTint="@color/cardview_light_background"
                android:foreground="?attr/selectableItemBackground"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:scaleType="fitCenter"
                android:text="@string/d2"
                android:theme="@style/AppTheme.ColorHighlight" />
            <Button
                android:id="@+id/about_donate_5_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/image_button_border"
                android:backgroundTint="@color/cardview_light_background"
                android:foreground="?attr/selectableItemBackground"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:scaleType="fitCenter"
                android:text="@string/d5"
                android:theme="@style/AppTheme.ColorHighlight" />

            <Button
                android:id="@+id/about_donate_10_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/image_button_border"
                android:backgroundTint="@color/cardview_light_background"
                android:foreground="?attr/selectableItemBackground"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:scaleType="fitCenter"
                android:text="@string/d10"
                android:theme="@style/AppTheme.ColorHighlight" />
            <Button
                android:id="@+id/about_donate_50_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/image_button_border"
                android:backgroundTint="@color/cardview_light_background"
                android:foreground="?attr/selectableItemBackground"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:scaleType="fitCenter"
                android:text="@string/d50"
                android:theme="@style/AppTheme.ColorHighlight" />

            <Button
                android:id="@+id/about_donate_100_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/image_button_border"
                android:backgroundTint="@color/cardview_light_background"
                android:foreground="?attr/selectableItemBackground"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:scaleType="fitCenter"
                android:text="@string/d100"
                android:theme="@style/AppTheme.ColorHighlight" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
