<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/defeat_reason_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="0dp">

    <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/defeat_reason_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorTransparent"
        android:foreground="?attr/selectableItemBackground"
        android:padding="8dp"
        android:theme="@style/AppTheme.ColorHighlight"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fragment_edit" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/defeat_reason_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_span="2"
                android:gravity="center_horizontal"
                android:text="@string/defeat_table_header"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:id="@+id/defeat_reason_mysteries_count_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/defeat_reason_mysteries_count_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/solved_mysteries_header" />

            <TextView
                android:id="@+id/defeat_reason_mysteries_count"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end" />

        </TableRow>

        <TableRow
            android:id="@+id/defeat_reason_by_elimination_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:layout_weight="1"
                android:text="@string/defeat_by_elimination" />

        </TableRow>

        <TableRow
            android:id="@+id/defeat_reason_by_mythos_depletion_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:layout_weight="1"
                android:text="@string/defeat_by_mythos_depletion" />

        </TableRow>

        <TableRow
            android:id="@+id/defeat_reason_by_awakened_ancient_one_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:layout_weight="1"
                android:text="@string/defeat_by_awakened_ancient_one" />

        </TableRow>

        <TableRow
            android:id="@+id/defeat_reason_by_rumor_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:layout_weight="1"
                android:text="@string/defeat_by_rumor" />

        </TableRow>

        <TableRow
            android:id="@+id/defeat_reason_by_rumor_name_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/defeat_reason_by_rumor_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:layout_weight="1"
                android:gravity="right|end" />

        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>